--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-.header{
+.header {
     position: fixed;
     top: 0;
     left: 0;
@@ -17,26 +17,36 @@
     align-items: center;
     z-index: 99;
 }
-.logo{
+.logo {
     font-size: 32px;
     color: #fff;
     text-decoration: none;
     font-weight: 700;
     pointer-events: none;
+    animation: slideRight 1s ease forwards;
 }
-.navbar a{
+.navbar a {
+    display: inline-block;
     font-size: 18px;
     color: #fff;
     text-decoration: none;
     font-weight: 500;
     margin-right: 40px;
+    transition: .3s;
+    animation: slideTop .5s ease forwards;
+    animation-delay: calc(.2s * var(--i));
+}
+.navbar a:hover,
+.navbar a.active {
+    color: rgb(169, 225, 228);
+    
 }
 .navbar .btnLogin-popup {
     position: relative;
     background: transparent;
     border: none;
     outline: none;
-    font-size: 18px;
+    font-size: 19px;
     color: #fff;
     font-weight: 500;
     cursor: pointer;
@@ -51,9 +61,45 @@
     background: #fff;
     opacity: .85;
 }
+.search-bar {
+    width: 250px;
+    height: 45px;
+    background: transparent;
+    border: 2px solid #fff;
+    border-radius: 16px;
+    display: flex;
+    align-items: center;
+}
+.search-bar input {
+    width: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    color: #fff;
+    padding-left: 10px;
+}
+.search-bar input::placeholder {
+    color: #fff;
+}
+.search-bar button {
+    width: 40px;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.search-bar button i {
+    font-size: 22px;
+    color: #fff;
+}
 .section {
     min-height: 100vh;
-    background: url('/images/background3.jpg') ;
+    background: url('/images/background3.jpg') no-repeat;
     background-size: cover;
     background-image: center;
 }
@@ -126,7 +172,7 @@
 .logreg-box .input-box {
     position: relative;
     width: 100%;
-    height: 50px;
+    height: 40px;
     margin: 30px 0;
     border-bottom: 2px solid #fff;
 }
@@ -151,6 +197,7 @@
     color: #fff;
     font-weight: 500;
     pointer-events: none;
+    transition: .5s;
 }
 .input-box input:focus~label,
 .input-box input:valid~label{
@@ -201,7 +248,6 @@
     color: #fff;
     text-align: center;
     font-weight: 500;
-   
     margin: 25px 0 15px;
 }
 .logreg-link p a {
@@ -242,4 +288,26 @@
 .media-options a span {
     font-size: 16px;
     font-weight: 500;
+}
+
+/* KEYFRAMES ANIMATION  */
+@keyframes slideRight {
+    0% {
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+@keyframes slideTop {
+    0% {
+        transform: translateY(-100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
