--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@
 }
 .section {
     min-height: 100vh;
-    background: url('/images/background3.jpg') no-repeat;
+    background: url('./background.png') no-repeat;
     background-size: cover;
     background-image: center;
 }
